# sqlite_zstd_vfs

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: tests.yml  windows.yml
src/: nested_vfs.cc  zstd_vfs.cc
